objects/zkusps__QueuedShipmentStatus__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__BatchId__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__BulkShipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Shipment</label>
        <referenceTo>zkusps__BulkShipment__c</referenceTo>
        <relationshipLabel>USPS Queued Shipment Status</relationshipLabel>
        <relationshipName>USPS_Queued_Shipment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__EntryNumber__c</fullName>
        <formula>zkusps__QueuedShipment__r.zkusps__EntryNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__PrintBatchId__c</fullName>
        <label>Print Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__QueuedShipment__c</fullName>
        <label>Queued Shipment</label>
        <referenceTo>zkusps__QueuedShipment__c</referenceTo>
        <relationshipLabel>USPS Queued Shipment Status</relationshipLabel>
        <relationshipName>USPS_Queued_Shipment_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>zkusps__Shipment__c</referenceTo>
        <relationshipLabel>USPS Queued Shipment Status</relationshipLabel>
        <relationshipName>USPS_Queued_Shipment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__StatusMessage__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROCESSING</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>VALIDATED</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkusps__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>USPS Queued Shipment Status</label>
    <nameField>
        <displayFormat>QS-Status-{00000000}</displayFormat>
        <label>Queued Shipment Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Queued Shipment Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>